--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -1,3 +1,21 @@
-button {
+.Card {
+  width: 10rem;
+  display: flex;
+  flex-direction: column;
+  margin: 2rem .2rem 0 1rem;
   cursor: pointer;
-}
+  filter: brightness(70%);
+  opacity: .95; }
+
+.Card:hover {
+  filter: brightness(100%);
+  opacity: 1; }
+
+img {
+  width: 10rem; }
+
+button {
+  background: red;
+  border: none;
+  height: 1.5rem;
+  cursor: pointer; }
