--- a/src/containers/MovieContainer.scss
+++ b/src/containers/MovieContainer.scss
@@ -1,3 +1,4 @@
-div {
-  background: red;
+ul {
+  display: flex;
+  flex-wrap: wrap;
 }
